fixed the z-index on the events section, but that navigation is still a struggle

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -56,3 +56,7 @@ button {
     padding: 12px 25px;
     }
 }
+
+.hamburger {
+    opacity: 0;
+}
